# django-yp-admin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
django_yp_admin/: __init__.py  admin.py  apps.py  filters.py  models.py  options.py  sites.py  widgets.py
django_yp_admin/contrib/: history_admin.py  import_export_admin.py  ordered_admin.py  solo_admin.py
django_yp_admin/history/: __init__.py  admin.py  models.py
django_yp_admin/migrations/: 0001_initial.py
django_yp_admin/static/yp_admin/css/: picnic.min.css  yp-admin.css
django_yp_admin/static/yp_admin/js/: yp-admin-alpine.js  yp-admin.js
django_yp_admin/templates/admin/: base.html  base_site.html  login.html  pagination.html  submit_line.html
django_yp_admin/templates/admin/includes/: fieldset.html
django_yp_admin/templates/admin/yp_admin/: _htmx_filter_attrs.html  change_form.html  change_form_fragment.html  change_form_fragment_base.html  change_form_versioning.html  change_list.html  change_list_form_fragment.html  filter_date_range.html  filter_datetime_range.html  filter_dropdown.html  filter_multiselect.html  filter_numeric_range.html  history.html
django_yp_admin/templatetags/: yp_admin.py
django_yp_admin/views/: reorder.py  versioning.py
docs/: browser-support.md  compatibility.md  filters.md  index.md  installation.md  modeladmin.md  optional-extras.md  ordered.md  quickstart.md  requirements.txt  singleton.md  versioning.md
docs/es/: browser-support.md  compatibility.md  filters.md  index.md  installation.md  modeladmin.md  optional-extras.md  ordered.md  quickstart.md  singleton.md  versioning.md
docs/pt/: browser-support.md  compatibility.md  filters.md  index.md  installation.md  modeladmin.md  optional-extras.md  ordered.md  quickstart.md  singleton.md  versioning.md
frontend/: .alpine-stub.ts  README.md  build.ts  bunfig.toml  package-lock.json  package.json  tsconfig.json
frontend/src/: autocomplete.ts  csrf.ts  main.ts  nested-inline.ts  popup-shim.ts  sortable.ts  utils.ts
tests/: conftest.py  settings.py  test_dropin.py  test_edge_cases.py  test_filters.py  test_options.py  test_ordered.py  test_popup.py  test_singleton.py  test_smoke.py  test_template_render.py  test_versioning.py  test_views.py  test_widgets.py  urls.py  urls_custom_site.py
tests/testapp/: apps.py  models.py
(+2 files in other folders)
